# telegram-ai-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.ru.md  pyproject.toml  topic_config.example.json
.claude/skills/bot-setup/: SKILL.md
.claude/skills/project-knowledge/: SKILL.md
.claude/skills/project-knowledge/references/: architecture.md  configuration.md  release-safety.md  testing.md
.claude/skills/topic-setup/: SKILL.md
.codex/skills/bot-setup/: SKILL.md
.codex/skills/project-knowledge/: SKILL.md
.codex/skills/project-knowledge/references/: architecture.md  configuration.md  release-safety.md  testing.md
.codex/skills/topic-setup/: SKILL.md
.github/workflows/: ci.yml
docs/systemd/: telegram-bot.service.template
mcp-servers/bot/: server.py  start.sh
src/telegram_bot/: __main__.py
src/telegram_bot/core/: config.py  keyboards.py  messages.py  types.py
src/telegram_bot/core/handlers/: _dispatch.py  cancel.py  commands.py  forum_topic.py  forward.py  mode.py  photo.py  streaming.py  tail.py  text.py  voice.py
src/telegram_bot/core/middleware/: auth.py
src/telegram_bot/core/services/: bot_commands.py  bot_mcp_runtime.py  cc_events.py  cc_modes.py  claude.py  codex_mcp.py  content.py  forward_batcher.py  live_buffer.py  message_queue.py  picker_store.py  process_cleanup.py  providers.py  resume_listing.py  tail_runner.py  telegram_utils.py  tmux_manager.py  tmux_modal_watchdog.py  tmux_recovery.py  tmux_spawn.py  tmux_state.py  (+3 more)
src/telegram_bot/prompts/: default.md  task-manager.md
tests/: test_public_runtime.py
(+12 files in other folders)
